# nn_library

./: even_odd_prime.py  pyproject.toml
nn_library/: data.py  layers.py  loss.py  nn.py  optimizer.py  tensor.py  train.py
