[project]
name = "nn-library"
version = "0.1.0"
description = ""
authors = [
    {name = "Zeke Sams",email = "ezekielvsams@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
